// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button complex, big and small version Component test - big config structure and activity 1`] = `
<button
  className="clickable btnObjBig noticable"
  name="buttonAndInner"
  onBlur={[Function]}
  onClick={[MockFunction]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="iconAndTextTogether undefined"
    name="buttonAndInner"
  >
    <i
      className="material-icons iconItself"
      name="buttonAndInner"
    >
      cancel
    </i>
    <span
      className="textNextToIcon undefined"
    >
      Cancel button
       
    </span>
  </span>
</button>
`;

exports[`Button complex, big and small version Component test - small config structure and activity 1`] = `
<button
  className="clickable btnObjSmall noticable"
  name="buttonAndInner"
  onBlur={[Function]}
  onClick={[MockFunction]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="iconWithoutText undefined"
    name="buttonAndInner"
  >
    <i
      className="material-icons iconItself"
      name="buttonAndInner"
    >
      cancel
    </i>
    
  </span>
</button>
`;

exports[`Button complex, big and small version Component test - small config structure and activity 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -15,8 +15,14 @@
        className=\\"material-icons iconItself\\"
        name=\\"buttonAndInner\\"
      >
        cancel
      </i>
-     
+     <span
+       className=\\"btnTooltipBubble\\"
+       name=\\"buttonAndInner\\"
+     >
+       Cancel button
+        
+     </span>
    </span>
  </button>"
`;
